--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Seymour+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo+2&display=swap');
 
 .headerWrapper { 
   display: flex; 
@@ -13,9 +14,11 @@
   min-height: 40px; 
   max-height: 10vh; 
   height: 10vh;  
+  z-index: 4;
 } 
 
-.logo {
+.logo { 
+  cursor: pointer; 
   font-family: 'Seymour One', sans-serif; 
   text-shadow: 0 0 1px white; 
   font-size: 25px; 
@@ -23,4 +26,63 @@
 } 
 .logo:hover {
   text-shadow: 0 0 4px white; 
+} 
+
+.headerElementsLogo {
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  flex-wrap: wrap;
+  gap: 20px; 
+  margin-right: 5vw;
+} 
+.logoElement {
+  cursor: pointer; 
+  font-size: 20px; 
+  border: 1px solid white; 
+  border-radius: 20px; 
+  padding: 5px 15px 5px 15px; 
+  font-family: 'Exo 2', sans-serif;
+  transition: background-color, 0.5s;
+}
+.logoElement:hover {
+  background-color: #5e5e5e;
+} 
+
+@media screen and (max-width: 600px) { 
+  .headerElementsLogo {
+    gap: 15px; 
+    margin-right: 3vw;
+  }
+  .logoElement { 
+    font-size: 16px; 
+    border: 1px solid white; 
+    border-radius: 20px; 
+    padding: 4px 12px 4px 12px; 
+  } 
+}
+
+@media screen and (max-width: 400px) { 
+  .headerElementsLogo {
+    gap: 10px; 
+    margin-right: 0;
+  }
+  .logoElement { 
+    font-size: 14px; 
+    border: 1px solid white; 
+    border-radius: 20px; 
+    padding: 2px 8px 2px 8px; 
+  } 
+}
+
+@media screen and (max-width: 340px) { 
+  .headerElementsLogo {
+    gap: 5px; 
+  }
+  .logoElement { 
+    font-size: 12px; 
+    border: 1px solid white; 
+    border-radius: 20px; 
+    padding: 1px 8px 2px 8px; 
+  } 
 }
