--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,10 @@ body::after {
   margin-top: 10vh; 
 }  
 
+.errMessage {
+  color: white; 
+}
+
 @media screen and (max-width: 700px) {
   body {
     background: url('./assets/bg2.jpg') center/100% 100% no-repeat; 
