--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,49 @@ body::after {
   color: white; 
 }
 
+.pagination-wrapper { 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  width: 100%; 
+  height: 20vh; 
+} 
+
+.paginator { 
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 5px;
+  width: 70%;
+  background: #2c2c2c;
+  border: 3px solid #606060; 
+  border-radius: 10px;
+  padding: 5px;
+  height: 80%; 
+  user-select: none;
+  overflow-x: scroll;
+} 
+
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 40px; 
+  min-width: 40px; 
+  border: 1px solid white; 
+  border-radius: 5px; 
+  padding: 5px; 
+  color: white; 
+  background-color: black; 
+  transition: background-color, text-shadow, 0.3s;
+} 
+
+.page:hover { 
+  background-color: #2c2c2c; 
+  text-shadow: 0 0 2px white;
+} 
+
+
 @media screen and (max-width: 700px) {
   body {
     background: url('./assets/bg2.jpg') center/100% 100% no-repeat; 
