--- a/src/App.css
+++ b/src/App.css
@@ -53,24 +53,32 @@ body::after {
 }
 
 .pagination-wrapper { 
-  display: flex; 
-  justify-content: center; 
-  align-items: center; 
-  width: 100%; 
-  height: 20vh; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 40vh;
+  margin-top: 10vh;
+  margin-bottom: 5vh;
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 10px black;
 } 
 
 .paginator { 
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   gap: 5px;
-  width: 70%;
-  background: #2c2c2c;
-  border: 3px solid #606060; 
+  width: 90%;
   border-radius: 10px;
-  padding: 5px;
-  height: 80%; 
+  padding: 20px;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  padding-top: 21px;
+  height: 90%;
+  -webkit-user-select: none;
   user-select: none;
   overflow-x: scroll;
 } 
