--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,12 @@ body::after {
 
 .errMessage {
   color: white; 
+  height: 12vh;
+} 
+
+.loading {
+  color: white; 
+  height: 12vh;
 }
 
 .pagination-wrapper { 
@@ -61,8 +67,8 @@ body::after {
   margin-top: 10vh;
   margin-bottom: 5vh;
   padding: 10px;
-  background: rgba(0, 0, 0, 0.6);
-  box-shadow: 0 0 10px black;
+  background: rgba(0, 0, 0, 0.6); 
+  box-shadow: 0 0 10px black; 
 } 
 
 .paginator { 
@@ -99,6 +105,11 @@ body::after {
 .page:hover { 
   background-color: #2c2c2c; 
   text-shadow: 0 0 2px white;
+} 
+
+.selectedPage {
+  background-color: #2c2c2c; 
+  text-shadow: 0 0 2px white; 
 } 
 
 
